@@ -3,17 +3,19 @@ package model.items;
 import com.googlecode.lanterna.TextColor;
 import model.Player;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class HealingPotion extends Potion {
-    private static final int HEAL_AMOUNT = 20;
+    // Health Potion Constants
+    public static final int HEAL_AMOUNT = 20;
 
+    // EFFECTS: Creates a simple potion that increases health
     public HealingPotion() {
-        super("Healing Potion", Arrays.asList("Heals 20 Hearts"), TextColor.ANSI.RED);
+        super("Healing Potion", List.of("Heals 20 Hearts"), TextColor.ANSI.RED);
     }
 
+    // EFFECTS: heals player once used
     @Override
-    // EFFECTS: heals player
     public void useItem(Player p) {
         p.heal(HEAL_AMOUNT);
         // Remove potion after use
